[package]
name = "aksumcli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
ipnet = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
yansi = "1.0.1"
